# Celeris

./: CMakeLists.txt  README.md  test_platform.cpp
docs/: CONTRIBUTING.md
include/ast/: ast.h  ast_factory.h
include/core/: itemNode.h
include/net/: serversock.h  socket.hpp
include/platform/: platform.h  plugin_loader.h  process_utils.h
include/process/: process.h
include/util/: fileParser.h
include/util/decisions/: decNode.h  ifDecTree.h
src/: main.cpp
src/ast/: ast.cpp  ast_factory.cpp  ast_factory.h  ast_manager.cpp
src/core/: APINode.cpp  APINode.h  FileSystem.cpp  RatelimitNode.cpp  RouteNode.cpp  ServerNode.cpp  databaseNode.cpp  itemNode.cpp  requestNode.cpp  storeNode.cpp  taskNode.cpp
src/db/: databaseCon.cpp
src/net/: Socket_manager.cpp  cleansocket.cpp  clientsock.cpp  serversock.cpp  socket.cpp  socket.hpp
src/platform/: plugin_loader.cpp  process_utils.cpp
src/process/: process.cpp
src/protocols/http/: httprequest.cpp
src/util/: PathResolver.cpp  fileParser.cpp  logger.cpp  mimetypes.cpp
src/util/decisions/: ifDecTree.cpp
